# HelpdeskAssistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: FormView.tsx  MessageBlob.tsx  MessageHistory.tsx  MessageInput.tsx
src/helpdeskassistant/: __init__.py  gemini.py  main.py
