[project]
name = "helpdeskassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maksnowak", email = "59841779+maksnowak@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.13.0",
]

[project.scripts]
helpdeskassistant = "helpdeskassistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
